--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,23 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+@import './base/rezet';
+@import './base/common';
+
+@import './utils/variables';
+@import './utils/visually-hidden';
+
+@import './components/button';
+@import './components/container';
+@import './components/logo';
+@import './components/modal';
+
+@import './layout/hero-header';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/customer-reviews';
+@import './layout/contacts';
+@import './layout/footer';
