--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -47,3 +47,77 @@
     /* Modern Browsers */ url('../fonts/dm-sans-v6-latin-700.ttf') format('truetype'),
     /* Safari, Android, iOS */ url('../fonts/dm-sans-v6-latin-700.svg#DMSans') format('svg'); /* Legacy iOS */
 }
+
+/*Header color*/
+$background_header_section: #ffb8ca;
+$background_circle: #ffa5ba;
+$background_text: #ffffff;
+$background_text_active: #d41443;
+
+/*Products*/
+$products_header_text: #d41443;
+$products_paragraph_text: #ffa5ba;
+$products_text: #ffffff;
+$background_ice_cream: #ffb8ca;
+$background_ice_coffee: #f0d1a5;
+$background_milkshakes: #c2e297;
+
+/*About*/
+$background_about_section: #fff5f6;
+$about_header_text: #d41443;
+$about_paragraph_text: #ffa5ba;
+$about_text_1: #000000;
+$about_text_2: #907e82;
+
+/*Advantages*/
+$background_advantages: #fff5f6;
+$advantages_figures: #d41443;
+$advantages_text: #000000;
+
+/*Gallery*/
+$background_galley_section: #fff5f6;
+
+/*Customer Reviews*/
+$background_review: #fafafa;
+$review_underline: #e1e1e1;
+$review_text: #000000;
+$review_icon: #d9d9d9;
+$review_icon_active: #d31342;
+
+/*Contacts*/
+$background_contacts: #fff5f6;
+$background_card: #ffffff;
+$card_box_shadow: rgba(212, 20, 67, 0.1);
+$background_name_cafe: #f0d1a5;
+$background_name_food_truck: #c2e297;
+$background_name_cafe: #f0d1a5;
+$name_card_text: #ffffff;
+$name_section_card: #000000;
+$time: #ffa5ba;
+$description: #907e82;
+$contacts: #907e82;
+$background_button_1: #d41342;
+$background_button_2: #ffffff;
+$button_text: #ffffff;
+$button_text_2: #d41443;
+$background_button_active: #ecebeb;
+$button_text_active: #d41443;
+
+/*Footer*/
+$background_footer: #fff5f6;
+$footer_name_header: #d41443;
+$footer_name_header_2: #ffa5ba;
+$background_icon: #fea5bb;
+$text_icon: #ffffff;
+$background_icon_active: #d41443;
+$footer_text: #000000;
+$number: #d41443;
+$footnote: #907e82;
+
+/*Modal*/
+$modal_background: #e17992;
+$modal_text: #ffffff;
+$modal_text_active: #d41443;
+$modal_border: #e18298;
+$modal_button_background: #ffffff;
+$modal_botton_text: #d41443;
