--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,4 @@
 <header class="hero-header"></header>
+
+<button type="button" class="button button--red">Products</button>
+<button type="button" class="button">How it’s made?</button>
