--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -4,6 +4,9 @@ body {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.04em;
+
+  background-color: $background_text;
+  color: $about_text_1;
 }
 
 img,
