--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -53,6 +53,8 @@ $background_header_section: #ffb8ca;
 $background_circle: #ffa5ba;
 $background_text: #ffffff;
 $background_text_active: #d41443;
+$background_hover_first: #ecebeb;
+$background_hover_second: #c7133e;
 
 /*Products*/
 $products_header_text: #d41443;
