--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import './base/rezet';
 @import './base/common';
 
+@import './components/title';
 @import './components/button';
 @import './components/container';
 @import './components/logo';
