--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,4 @@
-<header class="hero-header"></header>
+<header class="hero-header">
+  <p class="pre-title">100% natural</p>
+  <h1 class="title">products</h1>
+</header>
