--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,30 @@
-<section class="advantages"></section>
+<section class="advantages">
+  <h2 class="advantages__title">tradition and love</h2>
+  <p class="advantages__question">how it’s made?</p>
+  <img src="" alt="" width="280" height="279" />
+  <div>
+    <p class="advantages__text">
+      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
+      eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+    </p>
+    <p class="advantages__desk">
+      lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+      placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
+      nibh, tincidunt. Aliquam erat volutpat. Aenean accumsan.
+    </p>
+    <button type="button" class="advantages__button">Read more</button>
+  </div>
+  <ul class="advantages__list list">
+    <li class="advantages__item">
+      <svg class="advantages__icon" width="33" heigt="50"><use href=""></use></svg>
+      <p class="advantages__content">721</p>
+    </li>
+    <li class="advantages__item">
+      <svg class="advantages__icon" width="50" heigt="50"><use href=""></use></svg>
+      <p class="advantages__content">721</p>
+    </li>
+    <svg class="advantages__icon" width="44" heigt="50"><use href=""></use></svg>
+    <p class="advantages__content">721</p>
+    <li class="advantages__item"></li>
+  </ul>
+</section>
