--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,26 @@
-<section class="advantages"></section>
+<!--секція- переваги-->
+<section class="advantages">
+  <h2 class="visually-hidden">Advantages</h2>
+  <div class="advantages__container">
+    <ul class="advantages__list list">
+      <li class="advantages__item first">
+        <h3 class="advantages__content">721</h3>
+        <p class="advantages__signature">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages__item second">
+        <h3 class="advantages__content">16kg</h3>
+        <p class="advantages__signature">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages__item third">
+        <h3 class="advantages__content">84</h3>
+        <p class="advantages__signature">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
