--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,26 @@
-<header class="hero-header"></header>
+<header class="hero-header">
+  <div class="container hero-header__container">
+    <nav class="nav">
+      <a href="./index.html" class="logo">
+        <img src="./images/logo.png" alt="" width="199" />
+      </a>
+      <button class="mobail-menu__button menu-open" type="button">
+        <svg width="20" height="12" aria-label="Переключатель мобильного меню">
+          <use class="nav__icon-open" href="./images/icon.svg#icon-burger"></use>
+        </svg>
+      </button>
+    </nav>
+    <h1 class="title hero-header__title">
+      ice cream <br />
+      made with <span class="hero-header__title--red"> passion</span>
+    </h1>
+    <ul class="hero-header__list-button">
+      <li class="hero-header__item">
+        <button class="button button--red" type="button ">Products</button>
+      </li>
+      <li class="hero-header__item">
+        <button class="button" type="button">How it’s made?</button>
+      </li>
+    </ul>
+  </div>
+</header>
