--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,19 +3,25 @@
   display: inline-block;
   text-align: center;
   border: 0;
-  padding: 11px 20px;
-  min-width: 104px;
+  padding: 7px 14px;
+  min-width: 63px;
 
   color: $background_text_active;
   background-color: $background_text;
 
   font-family: inherit;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.286;
+  font-size: 8px;
+  line-height: 1.25;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+    line-height: 1.286;
+    padding: 11px 20px;
+    min-width: 104px;
+  }
   &:focus,
   &:hover {
     background-color: $background_hover_first;
