--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <!--секція- переваги-->
 <section class="advantages">
   <h2 class="visually-hidden">Advantages</h2>
-  <div class="advantages__container">
+  <div class="advantages__container container">
     <ul class="advantages__list list">
       <li class="advantages__item first">
         <h3 class="advantages__content">721</h3>
