--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -3,7 +3,6 @@
   margin-right: auto;
   padding-top: 121px;
   padding-bottom: 98px;
-
   text-align: center;
 }
 
@@ -32,6 +31,8 @@
 
 .products__list {
   position: relative;
+  width: 280px;
+  margin: 0 auto;
   .products__item:not(:last-child) {
     margin-bottom: 130px;
   }
@@ -54,7 +55,7 @@
       height: 252px;
       position: absolute;
       top: -110px;
-      left: 35px;
+      left: 18px;
 
       background-repeat: no-repeat;
       background-position: center;
@@ -70,7 +71,7 @@
       height: 252px;
       position: absolute;
       top: 520px;
-      left: 35px;
+      left: 18px;
 
       background-repeat: no-repeat;
       background-position: center;
@@ -86,7 +87,7 @@
       height: 252px;
       position: absolute;
       top: 1160px;
-      left: 35px;
+      left: 18px;
 
       background-repeat: no-repeat;
       background-position: center;
