--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
     </nav>
     <h1 class="title hero-header__title">
       ice cream <br />
-      made with <span class="hero-header__title--red"> passion</span>
+      made with <br /><span class="hero-header__title--red"> passion</span>
     </h1>
     <ul class="hero-header__list-button">
       <li class="hero-header__item">
