--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,20 +1,21 @@
 <section class="about">
-    <div class="container">
-      <p class="about__pre-title">tradition and love</p>
-      <h2 class="about__title">how it’s made?</h2>
-      <div class="about__flex">
+  <div class="container">
+    <p class="about__pre-title">tradition and love</p>
+    <h2 class="about__title">how it’s made?</h2>
+    <div class="about__flex">
       <picture>
         <source
           srcset="
-          ./images/compr1280/cow-milk-1x-min.png 1x,
-          ./images/compr1280/cow-milk-2x-min.png 2x
+            ./images/compr1280/cow-milk-1x-min.png 1x,
+            ./images/compr1280/cow-milk-2x-min.png 2x
           "
           media="(min-width: 1280px)"
         />
         <source
           srcset="
-          ./images/compr768/cow-milk-1x-min.png 1x,
-          ./images/compr768/cow-milk-2x-min.png 2x"
+            ./images/compr768/cow-milk-1x-min.png 1x,
+            ./images/compr768/cow-milk-2x-min.png 2x
+          "
           media="(min-width: 768px)"
         />
         <source
@@ -24,20 +25,25 @@
           "
           media="(min-width: 480px)"
         />
-        <img class="about__image"
-          src="./images/compr480/cow-milk-1x-min.png"
-          alt="cow"
-        />
+        <img class="about__image" src="./images/compr480/cow-milk-1x-min.png" alt="cow" />
       </picture>
       <div class="about__content">
-        <p class="about__description">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-      <p class="about__text about__text--first">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-      </p>
-      <p class="about__text about__text--second">Aliquam erat volutpat. Aenean accumsan.</p>
-      <button type="button" class="about__button">Read more<svg class="about__button-icon">
-        <use href="./images/symbol-defs.svg#icon-vector-right"></use>
-      </svg></button>
+        <p class="about__description">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+          lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+        </p>
+        <p class="about__text about__text--first">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
+          in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
+          maximus. Cras massa nibh, tincidunt.
+        </p>
+        <p class="about__text about__text--second">Aliquam erat volutpat. Aenean accumsan.</p>
+        <button type="button" class="about__button">
+          Read more<svg class="about__button-icon">
+            <use href="./images/icon.svg#icon-vector-right"></use>
+          </svg>
+        </button>
       </div>
     </div>
-    </div>
+  </div>
 </section>
