--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,69 +1,66 @@
-.advantages{
-    padding: 0;
-    margin: 0;
-    padding-top: 20px;
-    $background_advantages: #fff5f6;
-    
-    
-    width: 100%;
-    &__container{
-        width: 480px;
-        
-        padding-left: 20px;
-    }
-    &__list{
-        list-style: none;
+.advantages {
+  padding: 0;
+  margin: 0;
+  padding-top: 20px;
+  $background_advantages: #fff5f6;
 
+  width: 100%;
+  &__container {
+    width: 480px;
+
+    padding-left: 20px;
+  }
+  &__list {
+    list-style: none;
+  }
+  &__item {
+    width: 230px;
+    height: 156px;
+    &:not(:last-child) {
+      margin-bottom: 38px;
     }
-    &__item{
-        width: 230px;
-        height: 156px;
-        &:not(:last-child){margin-bottom: 38px;}
-            }
-       
-    &__content{
-            font-family: Titan One;
-             font-style: Regular;
-              font-size: 36px;
-               line-height: 41px;
-                line-height: 1 ;
-                letter-spacing: 0.04;
-                $advantages_text: #000000;
-                margin-bottom: 13px;
-                
-                }
-     &__signature {
-         font-family: DM Sans;
-         font-style: normal;
-         font-weight: bold;
-         font-size: 12px;
-         line-height: 170%;
-         $advantages_text: #000000;
-     }
-                
-        }
- .first::before {
-     content: "";
-     display: inline-block;
-     width: 33px;
-     height: 50px;
-     margin-bottom: 16px;
-     background-image: url("./images/icon1-min.png");
-     
- }
- .second::before {
-     content: "";
-     display: inline-block;
-     width: 50px;
-     height: 50px;
-     margin-bottom: 16px;
-     background-image: url("./images/icon2-min.png");
- }
- .third::before {
-     content: "";
-     display: inline-block;
-     width: 44px;
-     height: 50px;
-     margin-bottom: 16px;
-     background-image: url("./images/icon3-min.png");
- }
+  }
+
+  &__content {
+    font-family: Titan One;
+    font-style: Regular;
+    font-size: 36px;
+    line-height: 41px;
+    line-height: 1;
+    letter-spacing: 0.04;
+    $advantages_text: #000000;
+    margin-bottom: 13px;
+  }
+  &__signature {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 170%;
+    $advantages_text: #000000;
+  }
+}
+.first::before {
+  content: '';
+  display: inline-block;
+  width: 33px;
+  height: 50px;
+  margin-bottom: 16px;
+  background-image: url('../images/icon1-min.png');
+}
+.second::before {
+  content: '';
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 16px;
+  background-image: url('../images/icon2-min.png');
+}
+.third::before {
+  content: '';
+  display: inline-block;
+  width: 44px;
+  height: 50px;
+  margin-bottom: 16px;
+  background-image: url('../images/icon3-min.png');
+}
