--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -126,7 +126,7 @@
 
         <ul class="contacts__buttons">
             <li>
-                <button class="button button--red" type="button">
+                <button class="button button--red contacts-button" type="button">
                     Our Locations
                     <svg class="icon icon--white">
                         <use href="./images/icon.svg#icon-vector-right"></use>
@@ -135,7 +135,7 @@
             </li>
             
             <li>
-                <button class="button" type="button">
+                <button class="button contacts-button" type="button">
                     Franchise
                     <svg class="icon icon--red">
                         <use href="./images/icon.svg#icon-vector-right"></use>
