--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="contacts">
     <div class="container">
-        <h2 class="contacts__title">Contacts</h2>
+        <h2 class="visually-hidden">Contacts</h2>
         
         <ul class="contacts__cards">
             <li class="contacts__card">
