--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,42 @@
-<section class="footer"></section>
+<section class="footer">
+    <div class="container">
+        <p class="footer__pre-title pre-title">homemade ice cream made</p>
+
+        <h2 class="footer__title title">with </br> passion</h2>
+
+        <ul class="social-media__list">
+            <li class="social-media__item">
+                <a class="social-media__link" href="https://github.com/" target="_blank" rel="noreferrer noopener">
+                    <svg class="social-media__icon">
+                        <use href="./images/icon.svg#icon-github"></use>
+                    </svg>
+                </a>
+            </li>
+
+            <li class="social-media__item">
+                <a class="social-media__link" href="https://web.telegram.org/k/" target="_blank" rel="noreferrer noopener">
+                    <svg class="social-media__icon">
+                        <use href="./images/icon.svg#icon-telegram"></use>
+                    </svg>
+                </a>
+            </li>
+
+            <li class="social-media__item">
+                <a class="social-media__link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+                    <svg class="social-media__icon">
+                        <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
+        <p class="footer__tel-text">
+            Feel free to contact
+            <a class="footer__tel-link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+        </p>
+
+        <p class="footer__copyright">
+        &copy 2019 - IceCream. <span class="footer__span">All Rights Reserved.</span>
+        </p>
+    </div>
+</section>
