--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,4 +23,41 @@
       </li>
     </ul>
   </div>
+
+  <div class="mobail-menu is-hidden">
+    <div class="mobail-menu__container">
+      <button
+        class="mobail-menu__button mobail-menu__button--close menu-open menu-close"
+        type="button"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg width="14" height="14" aria-label="Переключатель мобильного меню">
+          <use class="nav__icon-close" href="./images/icon.svg#icon-close"></use>
+        </svg>
+      </button>
+      <button class="button button--big-text">
+        Buy now<svg width="10" height="10" aria-label="Переключатель мобильного меню">
+          <use class="nav__icon" href="./images/icon.svg#icon-vector-right"></use>
+        </svg>
+      </button>
+      <nav class="mobail-menu__nav">
+        <ul class="mobail-menu-nav__list">
+          <li class="mobail-menu-nav__item"><a href="" class="mobail-menu-nav__link">Home</a></li>
+          <li class="mobail-menu-nav__item">
+            <a href="" class="mobail-menu-nav__link">About us</a>
+          </li>
+          <li class="mobail-menu-nav__item">
+            <a href="" class="mobail-menu-nav__link">How it’s made?</a>
+          </li>
+          <li class="mobail-menu-nav__item">
+            <a href="" class="mobail-menu-nav__link">Our products</a>
+          </li>
+          <li class="mobail-menu-nav__item">
+            <a href="" class="mobail-menu-nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
