--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 @import './components/modal';
 
 @import './layout/hero-header';
+@import './components/mobail-menu';
 @import './layout/products';
 @import './layout/about';
 @import './layout/advantages';
