--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -55,6 +55,8 @@ $background_text: #ffffff;
 $background_text_active: #d41443;
 $background_hover_first: #ecebeb;
 $background_hover_second: #c7133e;
+$background_mobail-menu: #e17992;
+$mobail-menu-border: #e18298;
 
 /*Products*/
 $products_header_text: #d41443;
