--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,1 +1,37 @@
-<section class="customer-reviews"></section>
+<section class="customer-reviews">
+    <div class="container">
+        <img class="customer-reviews__photo" src="./images/compr480/testimonials1-1x-min.png" alt="">
+        
+        <div class="customer-reviews__comment">
+            <p>
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
+                accumsan
+                congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+        </div>
+        
+        <p class="customer-reviews__user">
+            Emily, Los Angeles
+        </p>
+        
+        <ul class="customer-reviews__group-icons">
+            <li>
+                <svg class="customer-reviews__icon">
+                    <use href="./images/icon.svg#icon-home"></use>
+                </svg>
+            </li>
+        
+            <li>
+                <svg class="customer-reviews__icon">
+                    <use href="./images/icon.svg#icon-ellipse"></use>
+                </svg>
+            </li>
+        
+            <li>
+                <svg class="customer-reviews__icon">
+                    <use href="./images/icon.svg#icon-ellipse"></use>
+                </svg>
+            </li>
+        </ul>
+    </div>
+</section>
