--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -133,6 +133,7 @@
   justify-content: center;
   width: 40px;
   height: 40px;
+  background-color: $products_text;
   border-radius: 50%;
   border-color: transparent;
 }
