Исправил кнопку и подшаманил картинку

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -86,7 +86,7 @@
         margin-bottom: 0;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1280px) {
         width: 516px;
     }
 }
@@ -146,6 +146,7 @@ margin-left: 35px;
   .about__button {
       @extend .button;
       font-weight: 700;
+      font-size: 14px;
       border-radius: 22px;
       width: 176px;
       height: 44px;
@@ -157,4 +158,5 @@ margin-left: 35px;
       height: 10px;
       margin-left: 18px;
       margin-bottom: -1px;
+      stroke: $about_header_text;
   }
