--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about">
   <div class="container">
-    <p class="about__pre-title">tradition and love</p>
+    <p class="about__pre-title" id="how">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
     <div class="about__flex">
       <picture>
