--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,147 +1,123 @@
 <section class="contacts">
-    <div class="container">
-        <h2 class="visually-hidden">Contacts</h2>
-        
-        <ul class="contacts__cards">
-            <li class="contacts__card">
-                <p class="contacts__category contacts__category--cafe">Cafe</p>
-        
-                <p class="contacts__location">Chicago</p>
-        
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        
-                <ul class="contacts__timetable">
-                    <li>
-                        <p class="contacts__day">
-                            Monday - Friday
-                        </p>
-        
-                        <p class="contacts__time">
-                            06:00 AM - 10:00 PM
-                        </p>
-                    </li>
-        
-                    <li>
-                        <p class="contacts__day">
-                            Saturday - Sunday
-                        </p>
-        
-                        <p class="contacts__time">
-                            08:00 AM - 16:00 PM
-                        </p>
-                    </li>
-                </ul>
-        
-                <ul class="contacts__list">
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="">+61(0) 383 766 284</a>
-                    </li>
-        
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
-        
-            <li class="contacts__card">
-                <p class="contacts__category contacts__category--foodtruck">Foodtruck</p>
-        
-                <p class="contacts__location">Los Angeles</p>
-        
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        
-                <ul class="contacts__timetable">
-                    <li>
-                        <p class="contacts__day">
-                            Monday - Friday
-                        </p>
-        
-                        <p class="contacts__time">
-                            06:00 AM - 10:00 PM
-                        </p>
-                    </li>
-        
-                    <li>
-                        <p class="contacts__day">
-                            Saturday - Sunday
-                        </p>
-        
-                        <p class="contacts__time">
-                            08:00 AM - 16:00 PM
-                        </p>
-                    </li>
-                </ul>
-        
-                <ul class="contacts__list">
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="">+61(0) 383 766 284</a>
-                    </li>
-        
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
-        
-            <li class="contacts__card">
-                <p class="contacts__category contacts__category--cafe">Cafe</p>
-        
-                <p class="contacts__location">New York</p>
-        
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        
-                <ul class="contacts__timetable">
-                    <li>
-                        <p class="contacts__day">
-                            Monday - Friday
-                        </p>
-        
-                        <p class="contacts__time">
-                            06:00 AM - 10:00 PM
-                        </p>
-                    </li>
-        
-                    <li>
-                        <p class="contacts__day">
-                            Saturday - Sunday
-                        </p>
-        
-                        <p class="contacts__time">
-                            08:00 AM - 16:00 PM
-                        </p>
-                    </li>
-                </ul>
-        
-                <ul class="contacts__list">
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284</a>
-                    </li>
-        
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
+  <div class="container">
+    <h2 class="visually-hidden" id="contact">Contacts</h2>
+
+    <ul class="contacts__cards">
+      <li class="contacts__card">
+        <p class="contacts__category contacts__category--cafe">Cafe</p>
+
+        <p class="contacts__location">Chicago</p>
+
+        <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="contacts__timetable">
+          <li>
+            <p class="contacts__day">Monday - Friday</p>
+
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+          </li>
+
+          <li>
+            <p class="contacts__day">Saturday - Sunday</p>
+
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
         </ul>
 
-        <ul class="contacts__buttons">
-            <li>
-                <button class="button button--red contacts-button" type="button">
-                    Our Locations
-                    <svg class="icon icon--white">
-                        <use href="./images/icon.svg#icon-vector-right"></use>
-                    </svg>
-                </button>
-            </li>
-            
-            <li>
-                <button class="button contacts-button" type="button">
-                    Franchise
-                    <svg class="icon icon--red">
-                        <use href="./images/icon.svg#icon-vector-right"></use>
-                    </svg>
-                </button>
-            </li>
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="">+61(0) 383 766 284</a>
+          </li>
+
+          <li class="contacts__item">
+            <a class="contacts__link" href="">noreply@envato.com</a>
+          </li>
         </ul>
-    </div>
+      </li>
+
+      <li class="contacts__card">
+        <p class="contacts__category contacts__category--foodtruck">Foodtruck</p>
+
+        <p class="contacts__location">Los Angeles</p>
+
+        <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="contacts__timetable">
+          <li>
+            <p class="contacts__day">Monday - Friday</p>
+
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+          </li>
+
+          <li>
+            <p class="contacts__day">Saturday - Sunday</p>
+
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="">+61(0) 383 766 284</a>
+          </li>
+
+          <li class="contacts__item">
+            <a class="contacts__link" href="">noreply@envato.com</a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="contacts__card">
+        <p class="contacts__category contacts__category--cafe">Cafe</p>
+
+        <p class="contacts__location">New York</p>
+
+        <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="contacts__timetable">
+          <li>
+            <p class="contacts__day">Monday - Friday</p>
+
+            <p class="contacts__time">06:00 AM - 10:00 PM</p>
+          </li>
+
+          <li>
+            <p class="contacts__day">Saturday - Sunday</p>
+
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284</a>
+          </li>
+
+          <li class="contacts__item">
+            <a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <ul class="contacts__buttons">
+      <li>
+        <button class="button button--red contacts-button" type="button">
+          Our Locations
+          <svg class="icon icon--white">
+            <use href="./images/icon.svg#icon-vector-right"></use>
+          </svg>
+        </button>
+      </li>
+
+      <li>
+        <button class="button contacts-button" type="button">
+          Franchise
+          <svg class="icon icon--red">
+            <use href="./images/icon.svg#icon-vector-right"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
