--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
         </svg>
       </button>
     </nav>
-    <h1 class="title hero-header__title">
+    <h1 class="title hero-header__title" id="home">
       ice cream <br />
       made with <br /><span class="hero-header__title--red"> passion</span>
     </h1>
@@ -43,18 +43,20 @@
       </button>
       <nav class="mobail-menu__nav">
         <ul class="mobail-menu-nav__list">
-          <li class="mobail-menu-nav__item"><a href="" class="mobail-menu-nav__link">Home</a></li>
+          <li class="mobail-menu-nav__item">
+            <a href="" class="mobail-menu-nav__link">Home</a>
+          </li>
           <li class="mobail-menu-nav__item">
             <a href="" class="mobail-menu-nav__link">About us</a>
           </li>
           <li class="mobail-menu-nav__item">
-            <a href="" class="mobail-menu-nav__link">How it’s made?</a>
+            <a href="#how" class="mobail-menu-nav__link">How it’s made?</a>
           </li>
           <li class="mobail-menu-nav__item">
-            <a href="" class="mobail-menu-nav__link">Our products</a>
+            <a href="#products" class="mobail-menu-nav__link">Our products</a>
           </li>
           <li class="mobail-menu-nav__item">
-            <a href="" class="mobail-menu-nav__link">Contact</a>
+            <a href="#contact" class="mobail-menu-nav__link">Contact</a>
           </li>
         </ul>
       </nav>
