--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -54,6 +54,12 @@
     background-repeat: no-repeat;
 
     background-size: 171px;
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/compr480/ice-burger-2x-min.png);
+    }
   }
 }
 
@@ -82,4 +88,49 @@
   line-height: 1.286;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.example__content-hidden {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: none;
+  padding: 63px 24px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .example__link:hover &,
+  .example__link:focus & {
+    transform: translatey(-100%);
+  }
+}
+
+.modal {
+  padding: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 93.75%;
+  height: 100%;
+
+  @media screen and (min-height: 500px) {
+    height: auto;
+    padding: 40px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
+
+  background-color: var(--wight-color);
+  border-radius: 4px;
+  box-shadow: var(--shadow-card);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
