--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,7 +1,8 @@
 .advantages {
-  padding: 0 auto;
+  padding: 0 ;
   margin: 0 auto;
   padding-top: 20px;
+  padding-bottom: 97px;
   background-color: #fff5f6;
 
   width: 100%;
